--- a/style.css
+++ b/style.css
@@ -99,6 +99,10 @@ p {
 
 .header__burger-menu {
     display: none;
+    width: 1.5rem;
+    height: 1.5rem;
+    border: none;
+    background: url(./images/burger.svg) center / contain no-repeat;
 }
 
 .header__nav-list {
@@ -216,6 +220,9 @@ p {
     grid-template-columns: 8rem minmax(5rem, 35rem);
     grid-template-rows: repeat(2, auto);
     row-gap: 1rem;
+}
+
+.stages__item:not(:last-child) {
     margin-bottom: 2rem;
 }
 
@@ -290,15 +297,16 @@ p {
     background-color: #9ed0e0;
 }
 
+.prices__offers-heading p {
+    font-size: 1.3rem;
+}
 
 .prices__offers-heading p:first-child {
-    font-size: 1.3rem;
     font-weight: 300;
     margin-bottom: .5rem;
 }
 
 .prices__offers-heading p:last-child {
-    font-size: 1.3rem;
     font-weight: 700;
 }
 
@@ -481,8 +489,199 @@ p {
 
 
 @media (max-width: 800px) {
+
+    .header__container {
+        padding: 1rem;
+    }
+
+    .header__logo {
+        font-size: .7rem;
+    }
+
+    .header__socials-link {
+        width: 1rem;
+        height: 1rem;
+    }
+
+    .header__burger-menu {
+        display: block;
+    }
+
     .header__nav-list {
         display: none;
         flex-direction: column;
+    }
+
+    .main-screen__container {
+        padding: 3rem 1rem;
+    }
+
+    .main-screen__heading {
+        font-size: 1rem;
+    }
+
+    .main-screen__content--about {
+        font-size: 1.5rem;
+    }
+
+    .main-screen__content--example {
+        font-size: .9rem;
+    }
+
+    .button-style {
+        font-size: .8rem;
+        padding: 1rem .5rem;
+    }
+
+    .about__container {
+        padding: 3rem 1rem;
+    }
+
+    .h2-style {
+        font-size: 1.5rem;
+    }
+
+    .about__video {
+        margin-bottom: 1rem;
+    }
+
+    .about__text-content-wrapper {
+        flex-direction: column;
+    }
+
+    .about__text-content {
+        width: 100%;
+        font-size: .8rem;
+    }
+
+    .works__section {
+        padding: 3rem 1rem;
+    }
+    
+    .works__container {
+        grid-template-columns: 1fr;
+    }
+
+    .stages__section {
+        background-image: none;
+    }
+
+    .stages__item {
+      grid-template-columns: 1fr; 
+      grid-template-rows: 0 repeat(2, auto); 
+    }
+
+    .stages__item:not(:last-child) {
+        margin-bottom: 2rem;
+    }
+
+    .stages__item:nth-child(odd) {
+        padding-left: 0;
+    }
+
+    .stages__number {
+        grid-area: 1/1/3/2;
+        color: rgba(255, 255, 255, 0.1);
+        font-size: 5rem;
+    }
+
+    .stages__heading {
+        grid-area: 2/1/3/2;
+    }
+
+    .stages__text-content {
+        grid-area: 3/1/4/2;
+    }
+
+    .prices__section {
+        padding: 3rem 1rem;
+    }
+
+    .prices__container {
+        padding: 0;
+    }
+
+    .prices__offers-list {
+        flex-direction: column;
+    }
+
+    .prices__offers-item {
+        width: 100%;
+    }
+
+    .prices__h2 {
+        margin-bottom: 2rem;
+    }
+
+    .prices__offers-heading p {
+        font-size: 1rem;
+    }
+
+    .prices__offers-cost span {
+        font-size: 1.2rem;
+    }
+
+    .prices__offers-cost, .prices__offers-request, .prices__offers-conditions-list {
+        margin: 0 1rem 1rem;
+    }
+
+    .prices__offers-request, .prices__offers-conditions-list {
+        padding-bottom: 1rem;
+    }
+
+    .prices__offers-details {
+        font-size: .7rem;
+        margin: 0 1rem 2rem;
+    }
+
+    .calculate-now__section {
+        padding: 4rem 1rem;
+    }
+
+    .calculate-now__container {
+        flex-direction: column;
+    }
+
+    .calculate-now__content {
+        padding-right: 0;
+        font-size: 1.2rem;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+
+    .calculate-now__content::after {
+        background-image: none;
+    }
+
+    .contacts__list {
+        flex-direction: column;
+    }
+
+    .faq__container {
+        padding: 3rem 1rem;
+    }
+
+    .faq__h2 {
+        margin-bottom: 2rem;
+    }
+
+    .faq__questions-list {
+        width: 100%;
+    }
+
+    .contacts__container {
+        padding: 3rem 1rem;
+    }
+
+    .contacts__h2 {
+        margin-bottom: 2rem;
+    }
+
+    .contacts__button--order {
+        margin-bottom: 2rem;
+    }
+
+    .contacts__content, .contacts__link {
+        font-size: .9rem;
     }
 }
