--- a/style.css
+++ b/style.css
@@ -66,8 +66,18 @@ p {
     background-color: #F2F2F2;
     border: 2px solid #171719;
     color: #171719;
+    font-size: 1rem;
     padding: 1.6rem 1.2rem;
     text-transform: uppercase;
+    background-image: linear-gradient(45deg, #dceef3 50%, transparent 50%);
+    background-position: 100%;
+    background-size: 400%;
+    transition: all 300ms linear;
+}
+
+.button-style:hover {
+    background-position: 0;
+    color: rgb(75 75 81);
 }
 
 .h2-style {
@@ -111,22 +121,27 @@ p {
 
 .header__nav-link {
     font-size: .8rem;
+    transition: all 0.2s linear;
 }
 
-.header__socials-link {
-    display: block;
-    width: 2rem;
-    height: 2rem;
-    background: center / contain no-repeat;
+.header__nav-link:hover {
+    color: #A0E8FF;
 }
 
-.header__socials-link--1 {
-    background-image: url(./images/img-whatsapp.svg);
+.header__socials-item:first-child {
     margin-right: 1rem;
 }
 
-.header__socials-link--2 {
-    background-image: url(./images/img-telegram.svg);
+.header__socials-link {
+    transition: all 0.2s linear;
+}
+
+.header__socials-link svg g path {
+    transition: all 0.2s linear;
+}
+
+.header__socials-link:hover svg g path {
+    fill: #A0E8FF;
 }
 
 /*main-screen__section*/
@@ -197,6 +212,17 @@ p {
     grid-template-columns: repeat(4, 1fr);
     max-width: fit-content;
     margin: 0 auto;
+}
+
+.works__img {
+    width: 100%;
+    height: 100%;
+    transition: all 0.2s linear;
+}
+
+.works__img:hover {
+    transform: scale(1.05);
+    box-shadow: 0px -2px 10px 2px rgba(34, 80, 80, 0.4);
 }
 
 /*stages__section*/
@@ -270,7 +296,7 @@ p {
 .prices__offers-list {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     gap: 1rem;
 }
 
@@ -281,6 +307,7 @@ p {
 }
 
 .prices__offers-heading {
+    min-height: 8rem;
     padding: 1.5rem 0;
     margin-bottom: 2rem;
 }
@@ -429,7 +456,6 @@ p {
 .faq__questions-item {
     width: 100%;
     position: relative;
-    background: rgba(217, 217, 217, 0.1);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
@@ -454,6 +480,12 @@ p {
     text-align: left;
     font-weight: 500;
     font-size: .9rem;
+    background: rgba(217, 217, 217, 0.1);
+    transition: all 0.2s linear;
+}
+
+.faq__questions-link:hover {
+    background: rgba(217, 217, 217, 0.2);
 }
 
 
@@ -490,6 +522,11 @@ p {
 .contacts__link {
     font-weight: 300;
     font-size: .9rem;
+    transition: all 0.2s linear;
+}
+
+.contacts__link:hover {
+    color: #A0E8FF;
 }
 
 @media (max-width: 1200px) {
@@ -525,11 +562,20 @@ p {
 
     .prices__offers-list {
         flex-direction: column;
+        align-items: center;
     }
 
     .prices__offers-item {
         width: 50%;
         min-width: 22rem;
+    }
+
+    .prices__offers-heading {
+        min-height: auto;
+    }
+
+    .stages__section {
+        background-image: none;
     }
 
 }
@@ -598,10 +644,6 @@ p {
     
     .works__container {
         grid-template-columns: 1fr;
-    }
-
-    .stages__section {
-        background-image: none;
     }
 
     .stages__item {
