--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ p {
     border: 2px solid #171719;
     color: #171719;
     font-size: 1rem;
-    padding: 1.6rem 1.2rem;
+    padding: .7rem 1rem;
     text-transform: uppercase;
     background-image: linear-gradient(45deg, #dceef3 50%, transparent 50%);
     background-position: 100%;
@@ -100,7 +100,7 @@ p {
 }
 
 .header__container {
-    padding: 2rem;
+    padding: .5rem 2rem;
 }
 
 .header__logo {
@@ -117,6 +117,10 @@ p {
 
 .header__nav-list {
     gap: 1rem;
+}
+
+.header__nav-button-close {
+    display: none;
 }
 
 .header__nav-link {
@@ -147,23 +151,36 @@ p {
 /*main-screen__section*/
 
 .main-screen__section {
+    height: 85vh;
+    min-height: 5rem;
+    max-height: 35rem;
     background: #171719 url(./images/main-screen-img.jpg) center / cover no-repeat;
 }
 
 .main-screen__container {
     text-align: center;
-    padding: 10rem 0 6rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
 .main-screen__heading {
     font-size: 1.3rem;
     margin: 0 0 2.5rem 0;
-    font-weight: 500;
+    font-weight: 300;
+    text-transform: uppercase;
 }
 
 .main-screen__content--about {
     font-size: 2rem;
     margin-bottom: 3.2rem;
+    line-height: 1.2;
+}
+
+.main-screen__content--accent {
+    color: #A0E8FF;
 }
 
 .main-screen__content--example {
@@ -185,7 +202,7 @@ p {
 }
 
 .about__video {
-    margin-bottom: 2.5rem;
+    margin-bottom: 2rem;
 }
 
 .about__text-content-wrapper {
@@ -193,11 +210,14 @@ p {
     justify-content: center;
     align-items: flex-start;
     gap: 2rem;
+    width: 70%;
+    margin: 0 auto;
 }
 
 .about__text-content {
     width: 50%;
     text-align: left;
+    font-size: .8rem;
 }
 
 /*works__section*/
@@ -268,12 +288,12 @@ p {
 .stages__heading {
     grid-area: 1/2/2/3;
     margin: 0;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .stages__text-content {
     grid-area: 2/2/3/3;
-    font-size: .9rem;
+    font-size: .7rem;
 }
 
 /*prices__section*/
@@ -474,7 +494,7 @@ p {
     height: 2rem;
 }
 
-.faq__questions-link {
+/* .faq__questions-link {
     display: block;
     padding: 1rem 2.7rem 1rem 2rem;
     text-align: left;
@@ -482,12 +502,48 @@ p {
     font-size: .9rem;
     background: rgba(217, 217, 217, 0.1);
     transition: all 0.2s linear;
-}
+} */
 
-.faq__questions-link:hover {
+/* .faq__questions-link:hover {
     background: rgba(217, 217, 217, 0.2);
+} */
+
+/*accordion*/
+
+.faq__questions-button {
+    cursor: pointer;
+    width: 100%;
+    border: none;
+    outline: none;
+    display: block;
+    padding: 1rem 2.7rem 1rem 2rem;
+    text-align: left;
+    font-weight: 500;
+    font-size: .9rem;
+    background: rgba(217, 217, 217, 0.1);
+    color: #F2F2F2;
+    transition: all 0.2s linear;
 }
 
+.active, .faq__questions-button:hover {
+    background-color: rgba(217, 217, 217, 0.2);
+}
+
+.faq__questions-panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+}
+
+.faq__questions-panel{
+    padding: 1rem 2.7rem 1rem 2rem;
+    text-align: left;
+    font-weight: 300;
+    font-size: .9rem;
+    background: rgba(217, 217, 217, 0.1);
+    color: #F2F2F2;
+}
 
 /*contacts*/
 
@@ -508,6 +564,8 @@ p {
 }
 
 .contacts__list {
+    width: 80%;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -534,13 +592,35 @@ p {
     .header__nav-list {
         display: none;
         flex-direction: column;
+        position: fixed;
+        background-color: #1E1E1E;
+        top: 0;
+        left: 0;
+        right: 0;
+        padding: 1rem 0;
+    }
+
+    .header__nav-link {
+        padding-left: 1rem;
+    }
+
+    .header__nav-list--show {
+        display: block;
+    }
+
+    .header__nav-button-close {
+        display: block;
+        position: absolute;
+        right: 1.2rem;
+        top: 1.4rem;
+        width: 1.5rem;
+        height: 1.5rem;
+        border: none;
+        background: url(./images/X.svg) center / cover no-repeat;
     }
 
     .header__burger-menu {
         display: block;
-    }
-
-    .header__burger-menu {
         width: 2rem;
         height: 2rem;
     }
